syntax = "proto3";

package pools;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message ImageDeletingRequest {
    string ImageId = 1;
}

message ImageDeletingTaskState {
    ImageDeletingRequest Request = 1;
}
